# sentinel

./: -  .env.backup_20251217_235733  .env.example  .env.staging  .gitignore  ACKNOWLEDGMENTS.md  AIOPS_SHIELD.md  AIOPS_SHIELD_COMMERCIAL.md  ANALISIS_COMPLETO_PROYECTO.md  ANALISIS_GENERAL_REAL_2025_12_21.md  ANALISIS_MEJORAS_ADICIONALES.md  ANALISIS_POC_BUFFERS.md  ANNOUNCEMENTS_DRAFT.md  ARCHITECTURE.md  ARQUITECTURA_UNIVERSAL_MULTI_ESCALA.md  ATTORNEY_SEARCH_EMERGENCY.md  AVANCE_2024_12_20.md  AVANCE_2024_12_20_CORREGIDO.md  BENCHMARKS_VALIDATED_EN.md  BLUEPRINT_SIMBIOSIS_HAPTICA.md  CAPTURA_IDEAS_CLAVE.md  CHANGELOG.md  CHECKLIST.md  CLAIM_4_FORENSIC_WAL_VALIDATED.md  CLAIM_5_MTLS_VALIDATED.md  CLAIM_9_PLANETARY_RESONANCE_PROJECTION.md  COGNITIVE_KERNEL_VISION.md  COGNITIVE_KERNEL_VISION_EN.md  COGNITIVE_OS_KERNEL_DESIGN.md  COMPILAR_CUANDO_VUELVAS.md  COMPLETE_OVERVIEW.md  CONTEXTO_COMPLETO_ANALISIS_2024_12_22.md  CONTEXT_NOTE.md  CONTRIBUTING.md  COPYRIGHT  CUSTOM_WASM_ENGINE.md  CV_ANID.md  CYBERSECURITY_WORKFLOWS_ANALYSIS.md  DASHBOARD-MIGRATION.md  DASHBOARD_MAINTENANCE.md  (+158 more)
sentinel-cortex/: .env.example  Cargo.toml  Dockerfile  README.md
sentinel-cortex/src/: main.rs
sentinel-wasm/: Cargo.toml  README.md  TEST_RESULTS.md  build-wasm.sh
sentinel-wasm/examples/: test_anomaly.rs
sentinel-wasm/src/: lib.rs
truthsync-poc/: .gitignore  BENCHMARK_RESULTS.md  CACHE_ANALYSIS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_RESULTS.md  HYBRID_ARCHITECTURE.md  OPTIMIZATION_RESULTS.md  SENTINEL_INTEGRATION_PLAN.md  STRESS_TESTING.md  TRUTHSYNC_DOCUMENTATION.md  UML_DIAGRAMS.md  benchmark_with_cache.py  docker-compose.yml  generate_synthetic_data.py  k8s-deployment.yaml  locustfile.py  observability.py  prometheus.yml  python_baseline.py  requirements.txt  sentinel_ml_integration.py  synthetic_claims_10k.json  synthetic_claims_1k.json  task.md  truthsync_buffer.py  truthsync_server.py
(+907 files in other folders)
